# lab5

./: CMakeLists.txt
zad_1/: Makefile  pthreads_suma  pthreads_suma.c
zad_2/: Makefile  dekompozycja_petli.c  obliczanie_calki  obliczanie_calki.c
